--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,12 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <form name="contact" netlify netflity-honeypot="bot-field" hidden>
+      <input type="text" name="name">
+      <input type="email" name="email">
+      <textarea name="message"></textarea>
+    </form>
+
   </body>
 </html>
