feat: add meta name and descriptions

--- a/public/index.html
+++ b/public/index.html
@@ -4,26 +4,33 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta property="og:title" content="www.pedrosiqueira.com.br">
+    <meta property="og:title" content="www.pedrosiqueira.com.br" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;800&display=swap"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
     <title>Pedro Siqueira</title>
+    <meta name="description" content="Full Stack Software Engineer" />
+    <meta property="og:url" content="https://www.pedrosiqueira.com.br/" />
+    <meta property="og:site_name" content="Pedro Siqueira" />
+    <meta property="og:description" content="Full Stack Software Engineer" />
+    <meta
+      property="twitter:description"
+      content="Full Stack Software Engineer"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
     <form name="contact" netlify netflity-honeypot="bot-field" hidden>
-      <input type="text" name="name">
-      <input type="email" name="email">
+      <input type="text" name="name" />
+      <input type="email" name="email" />
       <textarea name="message"></textarea>
     </form>
-
   </body>
 </html>
